[gd_scene load_steps=3 format=1]

[ext_resource path="res://boost_orb.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 100.0

[node name="Boost_Orb" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
time_to_target = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Particles2D1" type="Particles2D" parent="."]

config/amount = 12
config/lifetime = 1.5
config/process_mode = 1
config/half_extents = Vector2( 60, 60 )
config/local_space = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 80.0
params/spin_velocity = 5.0
params/orbit_velocity = 2.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 60.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.15564, 0.72173, 0.796875, 1 )

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 12
config/lifetime = 1.5
config/process_mode = 1
config/half_extents = Vector2( 60, 60 )
config/local_space = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 80.0
params/spin_velocity = 5.0
params/orbit_velocity = 2.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 60.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[connection signal="body_enter" from="." to="." method="_on_Boost_Orb_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_Boost_Orb_body_exit"]


